WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228310
[Modern Media Controls] [macOS] Overflow button still shows as `on` even after contextmenu is dismissed
https://bugs.webkit.org/show_bug.cgi?id=228310
Summary
[Modern Media Controls] [macOS] Overflow button still shows as `on` even afte...
Devin Rousso
Reported
2021-07-26 17:14:19 PDT
# STEPS TO REPRODUCE 1. go to any page with a `<video>` 2. click the >> overflow button 3. dismiss the contextmenu (e.g. click outside, escape, etc.) # EXPECTED the >> overflow button would no longer be white # ACTUAL the >> overflow button is still white
Attachments
Patch
(19.83 KB, patch)
2021-07-26 17:24 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(19.53 KB, patch)
2021-07-27 11:49 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(22.84 KB, patch)
2021-07-27 11:54 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(22.66 KB, patch)
2021-07-27 14:24 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2021-07-26 17:16:28 PDT
<
rdar://problem/81124786
>
Devin Rousso
Comment 2
2021-07-26 17:24:31 PDT
Created
attachment 434260
[details]
Patch
Wenson Hsieh
Comment 3
2021-07-26 17:37:54 PDT
Comment on
attachment 434260
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434260&action=review
> Source/WebKit/WebProcess/WebPage/WebContextMenu.cpp:71 > + m_page->shouldWaitForContextMenuToShow();
Nit - `shouldWaitForContextMenuToShow()` sounds a bit like the name of a const getter. Perhaps something along the lines of `startWaitingForContextMenuToShow()`?
Eric Carlson
Comment 4
2021-07-27 11:21:58 PDT
Comment on
attachment 434260
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434260&action=review
> Source/WebCore/ChangeLog:21 > + as that's the signal to the `MediaController` that the contextmenu interaction is ove, which
s/ove/over/
Devin Rousso
Comment 5
2021-07-27 11:49:46 PDT
Created
attachment 434303
[details]
Patch
Devin Rousso
Comment 6
2021-07-27 11:54:07 PDT
Created
attachment 434305
[details]
Patch oops forgot new test files
Devin Rousso
Comment 7
2021-07-27 14:24:31 PDT
Created
attachment 434315
[details]
Patch fix test expectations
EWS
Comment 8
2021-07-27 20:56:52 PDT
Committed
r280374
(
240018@main
): <
https://commits.webkit.org/240018@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434315
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug