Source/WebKit/WebProcess/WebPage/WebContextMenu.cpp
@@ -68,7 +68,7 @@ void WebContextMenu::show()
     ContextMenuContextData contextMenuContextData(menuLocation, menuItems, controller.context());
 
     // Mark the WebPage has having a shown context menu then notify the UIProcess.
-    m_page->contextMenuShowing();
+    m_page->startWaitingForContextMenuToShow();
     m_page->flushPendingEditorStateUpdate();
     m_page->send(Messages::WebPageProxy::ShowContextMenu(contextMenuContextData, UserData(WebProcess::singleton().transformObjectsToHandles(userData.get()).get())));
 }
